--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,42 @@
 /*Journey to the Center of the Earth Practium*/
 /* Alex Reyes*/
 
+header{
+
+    margin: 5rem;
+    padding:5px;
+    border: 4px solid #886644;
+    box-shadow: inset 3px 10px 13px -3px #000000;
+}
+
+nav{
+
+    margin: 5rem;
+    padding:5px;
+    border: 4px solid #886644
+    box-shadow: inset 3px 10px 13px -3px #000000;
+}
+
+main{
+
+    margin: 5rem;
+    padding:5px;
+    border: 4px solid #886644
+    box-shadow: inset 3px 10px 13px -3px #000000;
+}
+
+aside{
+
+    margin: 5rem;
+    padding:5px;
+    border: 4px solid #886644
+    box-shadow: inset 3px 10px 13px -3px #000000;
+}
+
+footer{
+
+    margin: 5rem;
+    padding:5px;
+    border: 4px solid #886644
+    box-shadow: inset 3px 10px 13px -3px #000000;
+}
