--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,15 @@ aside {
     margin-bottom:7rem;
 }
 
+/* tablet layout */
+@media screen and (max-width: 800px) {
+    main, aside {   
+      width: 100%;
+      padding: 0;
+      min-height:0;
+    }
+  }
+
 /* footer */
 footer {
     padding: 20px;
