--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header {
     text-shadow: 4px 4px 1px black;  
 }
 
-/* navi */
+/* nav */
 nav{
     margin-top: 0.5rem;
     margin-bottom:0.5rem;
@@ -81,6 +81,15 @@ main p:first-of-type::first-line {
     font-size:20px;
 }
 
+/* desktop layout */
+@media screen and (max-width: 800px) {
+    main {
+        margin-bottom:1rem;
+    }
+    aside {margin-bottom:7rem;}
+}
+
+
 /* aside */
 aside {
     float:left;
@@ -134,7 +143,7 @@ footer {
     padding: 20px;
 }
 
-/* Text styling */
+/* text styling */
 
 h2 {
     border-bottom: 1px dotted #333;
@@ -167,7 +176,7 @@ a:hover{
     height: auto;
 }
 
-/* Styling for the book reviews  */
+/* styling for the book reviews  */
 
 .submission {
     background-color:#dedad8;
