Desktop layout complete

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,14 @@ main p:first-of-type::first-line {
     font-size:20px;
 }
 
+/* desktop layout */
+@media screen and (max-width: 800px) {
+    main {
+        margin-bottom:1rem;
+    }
+    aside {margin-bottom:7rem;}
+}
+
 /* aside */
 aside {
     float:left;
